# portfolio_super_python_mysql_db

./: Presentation Instructions.txt.txt  README.md  app.py  pyproject.toml
static/css/: justit_portfolio_two.css  style.css
static/js/: contact-form.js  justit_portfolio_two.js
templates/: index.html  thank_you.html
